--- a/UE3/Client/package.json
+++ b/UE3/Client/package.json
@@ -22,6 +22,8 @@
     "angular-in-memory-web-api": "~0.2.4",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
+    "express": "^4.15.2",
+    "express-ws": "^3.0.0",
     "ng2-charts": "^1.5.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
