--- a/Client/package.json
+++ b/Client/package.json
@@ -11,33 +11,33 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "~4.4.7",
-    "@angular/core": "~4.4.7",
-    "@angular/forms": "~4.4.7",
-    "@angular/http": "~4.4.7",
-    "@angular/platform-browser": "~4.4.7",
-    "@angular/platform-browser-dynamic": "~4.4.7",
-    "@angular/router": "~4.4.7",
-    "angular-in-memory-web-api": "~0.2.4",
+    "@angular/animations": "7.2.7",
+    "@angular/common": "7.2.7",
+    "@angular/compiler": "7.2.7",
+    "@angular/core": "7.2.7",
+    "@angular/forms": "7.2.7",
+    "@angular/http": "7.2.7",
+    "@angular/platform-browser": "7.2.7",
+    "@angular/platform-browser-dynamic": "7.2.7",
+    "@angular/router": "7.2.7",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.5.0",
-    "rxjs": "5.0.1",
+    "rxjs": "^6.4.0",
     "systemjs": "0.19.40",
-    "zone.js": "^0.7.4"
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "~4.4.7",
-    "codelyzer": "~2.0.0",
-    "ts-node": "~2.0.0",
-    "tslint": "^5.1.0",
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.2.0",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "7.3.3",
+    "@angular/compiler-cli": "7.2.7",
+    "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
-    "@types/node": "^6.0.46"
+    "codelyzer": "^4.5.0",
+    "concurrently": "^3.1.0",
+    "ts-node": "~2.0.0",
+    "tslint": "^4.5.1",
+    "typescript": "3.2.4"
   }
 }
